@@ -1,5 +1,11 @@
 2005-04-20  Tom Tromey  <tromey@redhat.com>
 
+	* java/math/BigInteger.java (TEN): New constant.
+	* java/math/BigDecimal.java (ZERO, ONE): Now public.
+	(TEN): New constant.
+
+2005-04-20  Tom Tromey  <tromey@redhat.com>
+
 	* java/lang/Short.java (reverseBytes): Argument is 'short'.
 
 2005-04-20  Tom Tromey  <tromey@redhat.com>
